testdata/corset/valid/if_21.lisp
(defcolumns (X :i32 :padding 1) (Y :i32 :padding 1))
;;(defcomputed ((Y :i16@prove)) (id X))
(defconstraint c1 ()
  (if (== X 0)
      (== 1 0)
      (== X Y)))
